--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <!-- Links to the bootstrap Library -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
@@ -12,20 +14,92 @@
 
     <title>GifTastic</title>
 
+    <!-- Links to the css files -->
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
+
 <body>
-    
+    <!-- Jumbotron for the page heading -->
+    <div class="container">
+        <div class="jumbotron">
+            <div id="gifTasticTitle">GifTastic Search</div>
+        </div>
+        <div class="row">
+            <div class="col-md-8">
+                <!-- First form contains the fields, buttons for the add topic feature -->
+                <form>
+                    <div class="row add-topic-form">
+                        <div class="col-md-8">
+                            <label for="topic-input" id="topic-label">Add New Topic</label>
+                            <input type="text" class="form-control" id="topic-input"><br>
+                        </div>
+                    </div>
+                    <div class="row2 add-topic-form">
+                        <div class="col-md-4">
+                            <button type="submit" class="btn btn-primary mb-2" id="add-topic"> Add Topic</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <!-- Second side by side form contains the selectors for limit and rating -->
+            <div class="col-md-4">
+                <form>
+                    <div class="row preference-row">
+                        <div class="col-md-6">
+                            <label class="my-1 mr-2" for="limit-input" id="limit-label">Gif Limit:</label>
+                            <select class="custom-select" id="limit-pref">
+                                <option value="10">10</option>
+                                <option value="9">9</option>
+                                <option value="8">8</option>
+                                <option value="7">7</option>
+                                <option value="6">6</option>
+                                <option value="5">5</option>
+                                <option value="4">4</option>
+                                <option value="3">3</option>
+                                <option value="2">2</option>
+                                <option value="1">1</option>
+                            </select>
+                        </div>
+                        <div class="col-md-6">
+                            <label class="my-1 mr-2" for="inlineFormCustomSelectPref" id="rating-label">Rating:</label>
+                            <select class="custom-select my-1 mr-sm-2" id="rating-pref">
+                                <option value="y">Y</option>
+                                <option value="g">G</option>
+                                <option value="pg">PG</option>
+                                <option value="pg-13">PG-13</option>
+                                <option value="r">R</option>
+                            </select>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <hr>
+        <!-- Next row contains the topic buttons -->
+        <div class="row button-row">
+            <div class="col-md-12" id="buttons-view"></div>
+        </div>
+        <hr>
+        <!-- Next row is for a title to be displayed above the gif display -->
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-10" id="gif-title"></div>
+            <div class="col-md-1"></div>
+        </div>
+        <!-- Final row is where all the gifs and discriptors are displayed when you choose a topic -->
+        <div class="row gif-row" id="gif-display"></div>
+    </div>
 
-
-
-    <!-- jquery cdn link  -->
+    <!-- jquery cdn links  -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore.js"></script>
 
-    <!-- Adds a link to the JavaScript file.         -->
+    <!-- Adds a link to the JavaScript file. -->
     <script src="assets/javascript/app.js"></script>
 
 </body>
+
 </html>
