--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Jumbotron for the page heading -->
     <div class="container">
         <div class="jumbotron">
-            <div id="gifTasticTitle">GifTastic Search</div>
+            <div id="gifTasticTitle">Spooky Halloween Gifs</div>
         </div>
         <div class="row">
             <div class="col-md-8">
